--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
   VERSION: "${CI_COMMIT_TAG}"
   IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
   LATEST_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
-  PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION}"
+  PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION#v}"
   GOPRIVATE: "code.waarp.fr/*"
 
 stages:
