--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,23 @@ stages:
 
 code_navigation:
   stage: test
-  image: sourcegraph/lsif-go:latest
+  image: golang:latest
   allow_failure: true # recommended
+  before_script:
+    - go install github.com/sourcegraph/scip-go/cmd/scip-go@latest
   script:
-  - lsif-go --no-animation
-  - ls -lh dump.lsif
+    - scip-go -o dump.scip
+  after_script:
+    - |
+         env \
+         TAG="v0.4.0" \
+         OS="$(uname -s | tr '[:upper:]' '[:lower:]')" \
+         ARCH="$(uname -m | sed -e 's/x86_64/amd64/')" \
+         bash -c 'curl --location "https://github.com/sourcegraph/scip/releases/download/$TAG/scip-$OS-$ARCH.tar.gz"' \
+         | tar xzf - scip
+    - chmod +x scip
+    - ./scip convert --from dump.scip --to dump.lsif
+    - ls -lh dump.scip dump.lsif
   artifacts:
     reports:
       lsif: dump.lsif
