feat: Added minimum TLS version options to R66 & HTTP

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1338,6 +1338,7 @@ linters:
       exclusions:
         - "*.Value"
         - "*.String"
+        - "*.UnmarshalJSON"
 
     revive:
       # Maximum number of open files at the same time.
