feat/add tasks & usage rights transfer rules terminate

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -16,9 +16,16 @@
     "tooltipArguments": { "fr": " Les arguments du traitement", "en": "The arguments for treatment" },
     "apply": { "fr": "Appliquer", "en": "Apply" },
     "close": { "fr": "Fermer", "en": "Close" },
+    "edit": { "fr": "Modifier la pré-tâche", "en": "Edit pre-task" },
+    "trick": { "fr": "Astuce", "en": "Trick" },
+    "tooltipTrick": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
+    "cancel": { "fr": "Annuler", "en": "Cancel" },    
+    "selectType": { "fr": "Sélectionnez votre type", "en": "Select your type" },
     "preTasks": { "fr": "Pré-tâches", "en": "Pre-tasks" },
     "postTasks": { "fr": "Post-tâches", "en": "Post-tasks" },
     "errorTasks": { "fr": "Tâches d'erreur", "en": "Error tasks" },
+    "addPostTaskTitle": { "fr": "Ajouter une nouvelle post-tâche", "en": "Add a new post-task" },
+    "addErrorTaskTitle": { "fr": "Ajouter une nouvelle tâche d'erreur", "en": "Add a new error-task" },
     "path": { "fr": "Chemin", "en": "Path" },
     "tooltipPath": { "fr": "Chemin du fichier", "en": "File Chemin" },
     "tooltipDestinationPath": { "fr": "Chemin de destination", "en": "Destination path" },
@@ -47,5 +54,62 @@
     "tooltipFromCharset": { "fr": "Jeu de caractères source", "en": "Source charset" },
     "selectTranscode": { "fr": "Sélectionner le transcodage", "en": "Select transcode" },
     "toCharset": { "fr": "Vers le charset", "en": "To charset" },
-    "tooltipToCharset": { "fr": "Jeu de caractères de destination", "en": "Destination charset" }
+    "tooltipToCharset": { "fr": "Jeu de caractères de destination", "en": "Destination charset" },
+    "files": { "fr": "Fichiers", "en": "Files" },
+    "tooltipFiles": { "fr": "Le ou les fichiers/dossiers à ajouter à l'archive sous forme d'une liste séparée par des virgules.", "en": "The file(s)/folder(s) to add to the archive as a comma-separated list." },
+    "compressionLevel": { "fr": "Niveau de compression", "en": "Compression level" },
+    "tooltipCompressionLevel": { "fr": "Le niveau de compression. Doit être compris entre 0 (pas de compression) et 9 (compression maximum).", "en": "The compression level. Must be between 0 (no compression) and 9 (maximum compression)." },
+    "selectcompressionLevel": { "fr": "Sélectionnez votre niveau de compression", "en": "Select your compression level" },
+    "outputPath": { "fr": "Chemin de sortie", "en": "Output path" },
+    "tooltipOutputPath": { "fr": "Le chemin de l'archive. L'extension de cette archive déterminera le type d'archive, ainsi que la méthode de compression utilisée.", "en": "The path to the archive. The extension of this archive will determine the archive type, as well as the compression method used." },
+    "selectOutputPath": { "fr": "Sélectionnez votre chemin de sortie", "en": "Select your output path" },
+    "outputDir": { "fr": "Répertoire de sortie", "en": "Output directory" },
+    "tooltipOutputDir": { "fr": "Le chemin de destination des fichiers contenus dans l'archive.", "en": "The destination path of the files contained in the archive." },
+    "archive": { "fr": "Archive", "en": "Archive" },
+    "tooltipArchive": { "fr": "L'archive a extraire.", "en": "The archive to extract." },
+    "selectArchive": { "fr": "Sélectionnez votre archive", "en": "Select your archive" },
+    "uploadURL": { "fr": "Upload URL", "en": "URL de téléchargement" },
+    "tooltipUploadURL": { "fr": "L'URL complète de la requête ICAP. Cela inclue l'hôte, le port, ainsi que le chemin.", "en": "The full URL of the ICAP request. This includes the host, port, and path." },
+    "timeout": { "fr": "Temps d'attente", "en": "Timeout" },
+    "tooltipTimeout": { "fr": "Le temps de timeout de la requête. Les unités de temps acceptées sont: 'ms' (millisecondes), 's' (secondes), 'm' (minutes), et 'h' (heures).", "en": "The request timeout time. Accepted time units are: 'ms' (milliseconds), 's' (seconds), 'm' (minutes), and 'h' (hours)." },
+    "allowFileModifications": { "fr": "Autoriser les modifications de fichiers", "en": "Allow file modifications" },
+    "tooltipAllowFileModifications": { "fr": "Indique si le serveur ICAP est autorisé à modifier le fichier de transfert, auquel cas le fichier de transfert sera écrasé par le contenu de la réponse du serveur.", "en": "Indicates whether the ICAP server is allowed to modify the transfer file, in which case the transfer file will be overwritten with the contents of the server's response." },
+    "onError": { "fr": "En cas d'erreur", "en": "On error" },
+    "tooltipOnError": { "fr": "L'action à effectuer en cas d'erreur. Les valeurs acceptées sont : (vide) pour ne rien faire, delete pour supprimer le fichier de transfert ou move pour déplacer le fichier de transfert dans un autre dossier.", "en": "The action to take in case of error. Accepted values are: (empty) to do nothing, delete to delete the transfer file, or move to move the transfer file to another folder." },
+    "selectOnError": { "fr": "Sélectionnez l'action", "en": "Select the action" },
+    "onErrorMovePath": { "fr": "Chemin de déplacement en cas d'erreur", "en": "On error move path" },
+    "tooltipOnErrorMovePath": { "fr": "Le chemin vers lequel le fichier de transfert sera déplacé en cas d'erreur. Cette option est obligatoire si onError est move.", "en": "The path to which the transfer file will be moved in case of error. This option is required if onError is move." },
+    "outputFile": { "fr": "Fichier de sortie", "en": "Output file" },
+    "tooltipOutputFileEncrypt": { "fr": "Le chemin du nouveau fichier chiffré. Doit être différent du chemin du fichier source. Par défaut, le chemin sera identique à celui du fichier source avec le suffixe .crypt.", "en": "The path to the new encrypted file. Must be different from the path to the source file. By default, the path will be the same as the source file with the .crypt suffix." },
+    "tooltipOutputFileDecrypt": { "fr": "Le chemin du nouveau fichier déchiffré. Doit être différent du chemin du fichier source. Par défaut, le chemin sera identique à celui du fichier source avec le suffixe .plain.", "en": "The path to the new decrypted file. Must be different from the path to the source file. By default, the path will be the same as the source file with the .plain suffix." },
+    "keepOriginal": { "fr": "Conserver l'original", "en": "Keep original" },
+    "tooltipKeepOriginalEncrypt": { "fr": "Indique si le fichier source (en clair) doit être conservé ou non après chiffrement.", "en": "Indicates whether the source (clear) file should be kept or not after encryption." },
+    "method": { "fr": "Méthode", "en": "Method" },
+    "tooltipMethodEncrypt": { "fr": "La méthode de chiffrement à utiliser.", "en": "The encryption method to use." },
+    "tooltipKeyNameEncrypt": { "fr": "Le nom de la clé cryptographique à utiliser pour le chiffrement. Le type de la clé doit obligatoirement être adapté pour la méthode de chiffrement choisie.", "en": "The name of the cryptographic key to use for encryption. The key type must be appropriate for the chosen encryption method." },
+    "selectMethod": { "fr": "Sélectionnez votre méthode de chiffrement", "en": "Select your encryption method" },
+    "keyName": { "fr": "Nom de la clé", "en": "Key name" },
+    "tooltipKeyNameDecrypt": { "fr": "Le nom de la clé cryptographique à utiliser pour le déchiffrement. Le type de la clé doit obligatoirement être adapté pour la méthode de chiffrement choisie.", "en": "The name of the cryptographic key to use for decryption. The key type must be appropriate for the chosen encryption method." },
+    "tooltipMethodDecrypt": { "fr": "La méthode de chiffrement utilisée.", "en": "The encryption method used." },
+    "tooltipKeepOriginalDecrypt": { "fr": "Indique si le fichier source (chiffré) doit être conservé ou non après déchiffrement. Par défaut, le fichier chiffré est supprimé après déchiffrement.", "en": "Specifies whether the source (encrypted) file should be kept or not after decryption. By default, the encrypted file is deleted after decryption." },
+    "tooltipOutputFileSign": { "fr": "Le chemin du nouveau fichier contenant la signature du fichier de transfert. Doit être différent du chemin du fichier source.", "en": "The path to the new file containing the signature of the transfer file. Must be different from the path of the source file." },
+    "tooltipMethodSign": { "fr": "La méthode de signature à utiliser.", "en": "The signature method to use." },
+    "selectMethodSign": { "fr": "Sélectionnez votre méthode de signature", "en": "Select your signing method" },
+    "tooltipKeyNameSign": { "fr": "Le nom de la clé cryptographique à utiliser pour la signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for signing the file. The key type must be appropriate for the chosen signing method." },
+    "signatureFile": { "fr": "Fichier de signature", "en": "Signature file" },
+    "tooltipSignatureFile": { "fr": "Le chemin du fichier contenant la signature du fichier de transfert.", "en": "The path to the file containing the signature of the transfer file." },
+    "tooltipMethodVerify": { "fr": "La méthode de signature à utiliser.", "en": "The signature method to use." },
+    "selectMethodVerify": { "fr": "Sélectionnez votre méthode de signature", "en": "Select your signing method" },
+    "tooltipKeyNameVerify": { "fr": "Le nom de la clé cryptographique à utiliser pour la signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for signing the file. The key type must be appropriate for the chosen signing method." },
+    "tooltipMethodEncrypt&Sign": { "fr": "La méthode de chiffrement/signature combinés à utiliser.", "en": "The combined encryption/signature method to use." },
+    "selectMethodEncrypt&Sign": { "fr": "Sélectionnez votre méthode de chiffrement/signature", "en": "Select your encryption/signature method" },
+    "encryptKeyName": { "fr": "Nom de la clé de chiffrement", "en": "Encrypt key name" },
+    "tooltipEncryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour le chiffrement. Le type de la clé doit obligatoirement être adapté pour la méthode de chiffrement choisie.", "en": "The name of the cryptographic key to use for encryption. The key type must be appropriate for the chosen encryption method." },
+    "signKeyName": { "fr": "Nom de la clé de signature", "en": "Sign key name" },
+    "tooltipSignKeyNameEncrypt&Sign": { "fr": "Le nom de la clé cryptographique à utiliser pour la signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for signing the file. The key type must be appropriate for the chosen signing method." },
+    "tooltipMethodDecrypt&verify": { "fr": "La méthode de déchiffrement/vérification combinés à utiliser.", "en": "The combined decryption/verification method to use." },
+    "selectMethodDecrypt&verify": { "fr": "Sélectionnez votre méthode de déchiffrement/vérification", "en": "Select your decryption/verification method" },
+    "decryptKeyName": { "fr": "Décrypter le nom de la clé", "en": "Decrypt key name" },
+    "tooltipDecryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour le déchiffrement. Le type de la clé doit obligatoirement être adapté pour la méthode de chiffrement choisie.", "en": "The name of the cryptographic key to use for decryption. The key type must be appropriate for the chosen encryption method." },
+    "tooltipSignKeyNameDecryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour la validation de signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for file signature validation. The key type must be appropriate for the chosen signature method." }
 }
