feat/add grouping of the list of treatments, input+ extensions for output path and archive, timeout, infos tab, chang list for VerifyMethods & DecryptMethods

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -24,6 +24,13 @@
     "preTasks": { "fr": "Pré-tâches", "en": "Pre-tasks" },
     "postTasks": { "fr": "Post-tâches", "en": "Post-tasks" },
     "errorTasks": { "fr": "Tâches d'erreur", "en": "Error tasks" },
+    "fileOperation": { "fr": "Opération de fichier", "en": "File operation" },
+    "executable": { "fr": "Exécutable", "en": "Executable" },
+    "transfer": { "fr": "Transfert", "en": "Transfer" },
+    "fileAlteration": { "fr": "Altération fichier", "en": "File alteration" },
+    "archivingAndCompression": { "fr": "Archivage et compression", "en": "Archiving and compression" },
+    "network": { "fr": "Réseau", "en": "Network" },
+    "cryptographicTask": { "fr": "Tâche cryptographique", "en": "Cryptographic task" },
     "addPostTaskTitle": { "fr": "Ajouter une nouvelle post-tâche", "en": "Add a new post-task" },
     "addErrorTaskTitle": { "fr": "Ajouter une nouvelle tâche d'erreur", "en": "Add a new error-task" },
     "path": { "fr": "Chemin", "en": "Path" },
@@ -56,6 +63,7 @@
     "toCharset": { "fr": "Vers le charset", "en": "To charset" },
     "tooltipToCharset": { "fr": "Jeu de caractères de destination", "en": "Destination charset" },
     "files": { "fr": "Fichiers", "en": "Files" },
+    "extensions": { "fr": "Extensions", "en": "Extensions" },
     "tooltipFiles": { "fr": "Le ou les fichiers/dossiers à ajouter à l'archive sous forme d'une liste séparée par des virgules.", "en": "The file(s)/folder(s) to add to the archive as a comma-separated list." },
     "compressionLevel": { "fr": "Niveau de compression", "en": "Compression level" },
     "tooltipCompressionLevel": { "fr": "Le niveau de compression. Doit être compris entre 0 (pas de compression) et 9 (compression maximum).", "en": "The compression level. Must be between 0 (no compression) and 9 (maximum compression)." },
