feat/add final features add for tasks and usage rights transfer rules pages

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -1,7 +1,7 @@
 {
     "title": { "fr": "Authentification du serveur", "en": "Server authentication" },
-    "about": { "fr": "À propos", "en": "About", "es": "Acerca de" },
-    "logout": { "fr": "Déconnexion", "en": "Logout", "es": "Salir" },
+    "about": { "fr": "À propos", "en": "About" },
+    "logout": { "fr": "Déconnexion", "en": "Logout" },
     "connection": { "fr": "Connexion", "en": "Connection" },
     "treatment": { "fr": "Traitement", "en": "Treatment" },
     "monitoring": { "fr": "Supervision", "en": "Monitoring" },
@@ -21,6 +21,7 @@
     "tooltipTrick": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
     "cancel": { "fr": "Annuler", "en": "Cancel" },    
     "selectType": { "fr": "Sélectionnez votre type", "en": "Select your type" },
+    "selectKeyType": { "fr": "Sélectionnez le type de clé", "en": "Select the key type" },
     "preTasks": { "fr": "Pré-tâches", "en": "Pre-tasks" },
     "postTasks": { "fr": "Post-tâches", "en": "Post-tasks" },
     "errorTasks": { "fr": "Tâches d'erreur", "en": "Error tasks" },
@@ -44,24 +45,24 @@
     "delay": { "fr": "Délai", "en": "Delay" },
     "tooltipDelay": { "fr": "Délai avant exécution", "en": "Delay before execution" },
     "file": { "fr": "Fichier", "en": "File" },
-    "tooltipFile": { "fr": "Sélectionner un fichier", "en": "Select a file" },
+    "tooltipFile": { "fr": "Le chemin du fichier à transférer", "en": "The path of the file to be transferred" },
     "using": { "fr": "Utilisation", "en": "Using" },
-    "tooltipUsing": { "fr": "Utilisé pour cette tâche", "en": "Used for this task" },
+    "tooltipUsing": { "fr": "Le client à utiliser pour le transfert", "en": "The client to use for the transfer" },
     "to": { "fr": "Vers", "en": "To" },
-    "tooltipTo": { "fr": "Destination", "en": "Destination" },
-    "as": { "fr": "Comme", "en": "As" },
-    "tooltipAs": { "fr": "En tant que", "en": "As" },
+    "tooltipTo": { "fr": "Le nom du partenaire auquel se connecter", "en": "The name of the partner to connect to" },
+    "as": { "fr": "En tant que", "en": "As" },
+    "tooltipAs": { "fr": "Le nom du compte avec lequel s'authentifier auprès du partenaire", "en": "The name of the account with which to authenticate with the partne." },
     "rule": { "fr": "Règle", "en": "Rule" },
-    "tooltipRule": { "fr": "Règle associée", "en": "Associated rule" },
+    "tooltipRule": { "fr": "Le nom de la règle à utiliser pour le transfert", "en": "The name of the rule to use for the transfer" },
     "copyInfo": { "fr": "Informations de copie", "en": "Copy information" },
-    "tooltipCopyInfo": { "fr": "Détails sur la copie", "en": "Copy details" },
+    "tooltipCopyInfo": { "fr": "Indique si les informations du transfert en cours doit être copiées sur le nouveau transfert programmé", "en": "Indicates whether the information from the current transfer should be copied to the new scheduled transfer" },
     "info": { "fr": "Information", "en": "Information" },
-    "tooltipInfo": { "fr": "Informations supplémentaires", "en": "Additional information" },
+    "tooltipInfo": { "fr": "Les informations de transfert du nouveau transfert", "en": "The transfer information of the new transfer" },
     "fromCharset": { "fr": "Depuis le charset", "en": "From charset" },
-    "tooltipFromCharset": { "fr": "Jeu de caractères source", "en": "Source charset" },
+    "tooltipFromCharset": { "fr": "L'encodage actuel (source) du fichier.", "en": "The current (source) encoding of the file." },
     "selectTranscode": { "fr": "Sélectionner le transcodage", "en": "Select transcode" },
     "toCharset": { "fr": "Vers le charset", "en": "To charset" },
-    "tooltipToCharset": { "fr": "Jeu de caractères de destination", "en": "Destination charset" },
+    "tooltipToCharset": { "fr": "L'encodage souhaité (destination) du fichier.", "en": "The desired encoding (destination) of the file." },
     "files": { "fr": "Fichiers", "en": "Files" },
     "extensions": { "fr": "Extensions", "en": "Extensions" },
     "tooltipFiles": { "fr": "Le ou les fichiers/dossiers à ajouter à l'archive sous forme d'une liste séparée par des virgules.", "en": "The file(s)/folder(s) to add to the archive as a comma-separated list." },
@@ -119,5 +120,7 @@
     "selectMethodDecrypt&verify": { "fr": "Sélectionnez votre méthode de déchiffrement/vérification", "en": "Select your decryption/verification method" },
     "decryptKeyName": { "fr": "Décrypter le nom de la clé", "en": "Decrypt key name" },
     "tooltipDecryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour le déchiffrement. Le type de la clé doit obligatoirement être adapté pour la méthode de chiffrement choisie.", "en": "The name of the cryptographic key to use for decryption. The key type must be appropriate for the chosen encryption method." },
-    "tooltipSignKeyNameDecryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour la validation de signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for file signature validation. The key type must be appropriate for the chosen signature method." }
+    "tooltipSignKeyNameDecryptKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour la validation de signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de signature choisie.", "en": "The name of the cryptographic key to use for file signature validation. The key type must be appropriate for the chosen signature method." },
+    "verifyKeyName": { "fr": "Nom de la clé de vérification", "en": "Verify key name" },
+    "tooltipVerifyKeyName": { "fr": "Le nom de la clé cryptographique à utiliser pour la vérification de signature du fichier. Le type de la clé doit obligatoirement être adapté pour la méthode de vérification choisie.", "en": "The name of the cryptographic key to use for file signature verification. The key type must be appropriate for the chosen verification method." }
 }
