--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,19 @@
-# This file is a template, and might need editing before it works on your project.
-image: golang:latest
+default:
+  image: code.waarp.fr:5000/oci/build-base:latest
 
 variables:
   VERSION: "${CI_COMMIT_TAG}"
   IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
   LATEST_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
-  PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION#v}"
+  PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION}"
+  PACKAGE_DEB: "waarp-gateway_${VERSION}-1_amd64.deb"
+  PACKAGE_RPM: "waarp-gateway-${VERSION}-1.x86_64.rpm"
+  PACKAGE_LIN: "waarp-gateway-${VERSION}.linux.tar.gz"
+  PACKAGE_WIN: "waarp-gateway-${VERSION}.windows.zip"
+  PACKAGE_DOC: "waarp-gateway-doc-${VERSION}.zip"
+  GOPATH: "$CI_PROJECT_DIR/.gocache"
+  GOCACHE: "${GOPATH}/go-build"
+  GOLANGCI_LINT_CACHE: "$CI_PROJECT_DIR/.golangci-lint-cache"
   GOPRIVATE: "code.waarp.fr/*"
 
 stages:
@@ -16,22 +24,13 @@ stages:
 
 code_navigation:
   stage: test
-  image: golang:latest
   allow_failure: true # recommended
-  before_script:
-    - go install github.com/sourcegraph/scip-go/cmd/scip-go@latest
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
   script:
     - scip-go -o dump.scip
   after_script:
-    - |
-         env \
-         TAG="v0.4.0" \
-         OS="$(uname -s | tr '[:upper:]' '[:lower:]')" \
-         ARCH="$(uname -m | sed -e 's/x86_64/amd64/')" \
-         bash -c 'curl --location "https://github.com/sourcegraph/scip/releases/download/$TAG/scip-$OS-$ARCH.tar.gz"' \
-         | tar xzf - scip
-    - chmod +x scip
-    - ./scip convert --from dump.scip --to dump.lsif
+    - scip convert --from dump.scip --to dump.lsif
     - ls -lh dump.scip dump.lsif
   artifacts:
     reports:
@@ -42,31 +41,36 @@ lint:
   image: golangci/golangci-lint:latest
   script:
   - golangci-lint cache status
-  - golangci-lint run --timeout 5m --output.junit-xml.path lint.junit.xml  --output.text.path /dev/null
+  - golangci-lint run --timeout 15m --output.junit-xml.path lint.junit.xml --output.text.path stdout --output.code-climate.path=gl-code-quality-report.json
+  cache:
+    - key: go_dependencies_cache
+      paths:
+        - $GOPATH
+      when: always
+    - key: $CI_COMMIT_REF_SLUG
+      paths:
+        - $GOLANGCI_LINT_CACHE
+      when: always
   artifacts:
     reports:
       junit: lint.junit.xml
+      codequality: gl-code-quality-report.json
 
 tests:
   stage: test
-  before_script:
-    - export GOPATH="$CI_PROJECT_DIR/.gocache"
-    - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
-    - go install gotest.tools/gotestsum@latest
   script:
-    #- gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic -race ./...
-    - gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic ./...
+    - gotestsum --junitfile tests.junit.xml --rerun-fails --format-icons hivis --packages ./... -- -coverprofile=coverage.txt -covermode atomic -shuffle on
   after_script:
-    - go install github.com/boumenot/gocover-cobertura@latest
     - gocover-cobertura < coverage.txt > coverage.xml
     - go tool cover -func=coverage.txt | grep "total:"
   coverage: '/total:\s+\(statements\)\s+(\d+.\d+\%)/'
   cache:
-    key: go_dependencies_cache
-    paths:
-    - $CI_PROJECT_DIR/.gocache/
+    - key: go_dependencies_cache
+      paths:
+        - $GOPATH
   artifacts:
     reports:
+      junit: tests.junit.xml
       coverage_report:
         coverage_format: cobertura
         path: coverage.xml
@@ -74,20 +78,12 @@ tests:
 compile:
   stage: build
   except: [ tags ]
-  before_script:
-    - >
-      apt update -y
-      && apt install -y file gcc-multilib gcc-mingw-w64-x86-64
-      && apt clean
-      && rm -rf /var/lib/apt/lists/*
-    - export GOPATH="$CI_PROJECT_DIR/.gocache"
-    - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
   script:
     - ./make.sh build dist
   cache:
-    key: go_dependencies_cache
-    paths:
-    - $CI_PROJECT_DIR/.gocache/
+    - key: go_dependencies_cache
+      paths:
+        - $GOPATH
 
 package:
   stage: build
@@ -96,37 +92,37 @@ package:
   before_script:
     - >
       apt update -y
-      && apt install -y file gcc-mingw-w64-x86-64 virtualenv zip docker.io
+      && apt install -y docker.io
       && apt clean
       && rm -rf /var/lib/apt/lists/*
-    - export GOPATH="$CI_PROJECT_DIR/.gocache"
-    - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
     - git config url."https://gitlab-ci-token:$CI_JOB_TOKEN@code.waarp.fr".insteadOf "https://code.waarp.fr"
-    - go install github.com/goreleaser/nfpm/v2/cmd/nfpm@v2.36.1
   script:
     - ./make.sh build dist
     - ./make.sh package
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker push $IMAGE_TAG
+  after_script:
+    - export FULLVERSION=$(git describe --tags --abbrev=0)
+    - echo VERSION=${FULLVERSION#v} >>version.env
+    - ls build/
   cache:
-    key: go_dependencies_cache
-    paths:
-    - $CI_PROJECT_DIR/.gocache/
+    - key: go_dependencies_cache
+      paths:
+        - $GOPATH
   artifacts:
     paths:
-      - build/
+      - build/*.rpm
+      - build/*.deb
+      - build/*.zip
+      - build/*.tar.gz
+    reports:
+      dotenv: version.env
 
 upload-packages:
   stage: upload
   image: curlimages/curl:latest
   rules:
     - if: $CI_COMMIT_TAG
-  before_script:
-    - export PACKAGE_DEB="waarp-gateway_${VERSION#v}-1_amd64.deb"
-    - export PACKAGE_RPM="waarp-gateway-${VERSION#v}-1.x86_64.rpm"
-    - export PACKAGE_LIN="waarp-gateway-${VERSION#v}.linux.tar.gz"
-    - export PACKAGE_WIN="waarp-gateway-${VERSION#v}.windows.zip"
-    - export PACKAGE_DOC="waarp-gateway-doc-${VERSION#v}.zip"
   script:
     - |
       curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file build/${PACKAGE_DEB} ${PACKAGE_REGISTRY_URL}/${PACKAGE_DEB}
@@ -155,12 +151,6 @@ release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
     - if: $CI_COMMIT_TAG
-  before_script:
-    - export PACKAGE_DEB="waarp-gateway_${VERSION#v}-1_amd64.deb"
-    - export PACKAGE_RPM="waarp-gateway-${VERSION#v}-1.x86_64.rpm"
-    - export PACKAGE_LIN="waarp-gateway-${VERSION#v}.linux.tar.gz"
-    - export PACKAGE_WIN="waarp-gateway-${VERSION#v}.windows.zip"
-    - export PACKAGE_DOC="waarp-gateway-doc-${VERSION#v}.zip"
   script:
     - |
       release-cli create \
