--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3166,22 +3166,22 @@ issues:
 # Output configuration options.
 output:
   # The formats used to render issues.
-  formats:
+  #formats:
     # Prints issues in a text format with colors, line number, and linter name.
     # This format is the default format.
-    text:
-      # Output path can be either `stdout`, `stderr` or path to the file to write to.
-      # Default: stdout
-      path: stdout
-      # Print linter name in the end of issue text.
-      # Default: true
-      print-linter-name: true
-      # Print lines of code with issue.
-      # Default: true
-      print-issued-lines: true
-      # Use colors.
-      # Default: true
-      colors: true
+    #text:
+    #  # Output path can be either `stdout`, `stderr` or path to the file to write to.
+    #  # Default: stdout
+    #  path: stdout
+    #  # Print linter name in the end of issue text.
+    #  # Default: true
+    #  print-linter-name: true
+    #  # Print lines of code with issue.
+    #  # Default: true
+    #  print-issued-lines: true
+    #  # Use colors.
+    #  # Default: true
+    #  colors: true
     # Prints issues in a JSON representation.
     #json:
       # Output path can be either `stdout`, `stderr` or path to the file to write to.
