feat/add transfer monitoring page (without filter)

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -12,6 +12,7 @@
     "index": { "fr": "Index", "en": "Index" },
     "tooltipIndex": { "fr": "Index de la tâche", "en": "Task Index" },
     "type": { "fr": "Type", "en": "Type" },
+    "add": { "fr": "Ajouter", "en": "Add" },
     "tooltipType": { "fr": "Le type de traitement", "en": "The type of treatment" },
     "arguments": { "fr": " Arguments", "en": "Arguments" },
     "tooltipArguments": { "fr": " Les arguments du traitement", "en": "The arguments for treatment" },
