--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ code_navigation:
 lint:
   stage: test
   image: golangci/golangci-lint:latest
+  allow_failure: true # temporary
   script:
   - golangci-lint cache status
   - golangci-lint run --timeout 10m --output.junit-xml.path lint.junit.xml  --output.text.path /dev/null
@@ -59,7 +60,7 @@ tests:
     - go install gotest.tools/gotestsum@latest
   script:
     #- gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic -race ./...
-    - gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic ./...
+    - gotestsum --junitfile tests.junit.xml --rerun-fails --packages ./... -- -coverprofile=coverage.txt -covermode atomic
   after_script:
     - go install github.com/boumenot/gocover-cobertura@latest
     - gocover-cobertura < coverage.txt > coverage.xml
