change/ tick to tips

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -19,8 +19,10 @@
     "apply": { "fr": "Appliquer", "en": "Apply" },
     "close": { "fr": "Fermer", "en": "Close" },
     "edit": { "fr": "Modifier la pré-tâche", "en": "Edit pre-task" },
-    "trick": { "fr": "Astuce", "en": "Trick" },
-    "tooltipTrick": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
+    "fieldName": { "fr": "Nom du champ", "en": "Field name" },
+    "value": { "fr": "Valeur", "en": "Value" },
+    "tips": { "fr": "Astuce", "en": "Tips" },
+    "tooltipTips": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
     "cancel": { "fr": "Annuler", "en": "Cancel" },    
     "selectType": { "fr": "Sélectionnez votre type", "en": "Select your type" },
     "selectKeyType": { "fr": "Sélectionnez le type de clé", "en": "Select the key type" },
