--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -26,7 +26,7 @@
     "tooltipTips": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
     "cancel": { "fr": "Annuler", "en": "Cancel" },    
     "selectType": { "fr": "Sélectionnez votre type", "en": "Select your type" },
-    "selectKeyType": { "fr": "Sélectionnez le type de clé", "en": "Select the key type" },
+    "selectKeyType": { "fr": "Sélectionnez le nom de clé", "en": "Select the key name" },
     "preTasks": { "fr": "Pré-tâches", "en": "Pre-tasks" },
     "postTasks": { "fr": "Post-tâches", "en": "Post-tasks" },
     "errorTasks": { "fr": "Tâches d'erreur", "en": "Error tasks" },
