add last features 0.13v gateway

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -20,6 +20,8 @@
     "managing_authentication_authorities": { "fr": "Gestion des autorités d'authentification", "en": "Managing authentication authorities" },
     "cloud_instance_management": { "fr": "Gestion des instances cloud", "en": "Cloud instance management" },
     "snmp_management": { "fr": "Gestion de SNMP", "en": "SNMP Management" },
+    "smtp_credentials_management": { "fr": "Gestion des identifiants SMTP", "en": "SMTP credentials management" },
+    "email_templates_management": { "fr": "Gestion des templates d'email", "en": "Email templates management" },
     "cryptographic_key_management": { "fr": "Gestion des clés cryptographiques", "en": "Cryptographic key management" },
 
     "title": { "fr": "Gestion des tâches de transfert", "en": "Transfer tasks management" },
@@ -41,9 +43,17 @@
     "fieldName": { "fr": "Nom du champ", "en": "Field name" },
     "value": { "fr": "Valeur", "en": "Value" },
     "tips": { "fr": "Astuce", "en": "Tips" },
+    "sender": { "fr": "Expéditeur", "en": "Sender" },
+    "selectSMTP": { "fr": "Sélectionnez votre identifiant SMTP", "en": "Select your SMTP ID" },
     "tooltipTips": { "fr": "Maintenez et faites glisser la ligne pour modifier l'ordre", "en": "Hold and drag the line to change the order" },
     "cancel": { "fr": "Annuler", "en": "Cancel" },    
     "selectType": { "fr": "Sélectionnez votre type", "en": "Select your type" },
+    "selectPartner": { "fr": "Sélectionnez le partenaire", "en": "Select the partner" },
+    "selectClient": { "fr": "Sélectionnez le client", "en": "Select the client" },
+    "recipients": { "fr": "Destinataires", "en": "Recipients" },
+    "recipientEmail": { "fr": "Email du destinataire", "en": "Recipient email" },
+    "template": { "fr": "Modèle d'email", "en": "Email template" },
+    "selectTmplEmail": { "fr": "Sélectionnez le modèle d'email", "en": "Select email template" },
     "selectKeyType": { "fr": "Sélectionnez le nom de clé", "en": "Select the key name" },
     "preTasks": { "fr": "Pré-tâches", "en": "Pre-tasks" },
     "postTasks": { "fr": "Post-tâches", "en": "Post-tasks" },
@@ -74,7 +84,7 @@
     "to": { "fr": "Vers", "en": "To" },
     "tooltipTo": { "fr": "Le nom du partenaire auquel se connecter", "en": "The name of the partner to connect to" },
     "as": { "fr": "En tant que", "en": "As" },
-    "tooltipAs": { "fr": "Le nom du compte avec lequel s'authentifier auprès du partenaire", "en": "The name of the account with which to authenticate with the partne." },
+    "tooltipAs": { "fr": "Le nom du compte avec lequel s'authentifier auprès du partenaire", "en": "The name of the account with which to authenticate with the partner." },
     "rule": { "fr": "Règle", "en": "Rule" },
     "tooltipRule": { "fr": "Le nom de la règle à utiliser pour le transfert", "en": "The name of the rule to use for the transfer" },
     "copyInfo": { "fr": "Informations de copie", "en": "Copy information" },
@@ -93,6 +103,8 @@
     "tooltipCompressionLevel": { "fr": "Le niveau de compression. Doit être compris entre 0 (pas de compression) et 9 (compression maximum).", "en": "The compression level. Must be between 0 (no compression) and 9 (maximum compression)." },
     "selectcompressionLevel": { "fr": "Sélectionnez votre niveau de compression", "en": "Select your compression level" },
     "outputPath": { "fr": "Chemin de sortie", "en": "Output path" },
+    "output": { "fr": "Chemin de sortie", "en": "Output path" },
+    "tooltipOutput": { "fr": "Chemin de sortie", "en": "Output path" },
     "tooltipOutputPath": { "fr": "Le chemin de l'archive. L'extension de cette archive déterminera le type d'archive, ainsi que la méthode de compression utilisée.", "en": "The path to the archive. The extension of this archive will determine the archive type, as well as the compression method used." },
     "selectOutputPath": { "fr": "Sélectionnez votre chemin de sortie", "en": "Select your output path" },
     "outputDir": { "fr": "Répertoire de sortie", "en": "Output directory" },
