add modal about

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -38,6 +38,12 @@
     "arguments": { "fr": " Arguments", "en": "Arguments" },
     "tooltipArguments": { "fr": " Les arguments du traitement", "en": "The arguments for treatment" },
     "apply": { "fr": "Appliquer", "en": "Apply" },
+    "revision": { "fr": "Révision", "en": "Revision" },
+    "license": { "fr": "Licence", "en": "License" },
+    "links": { "fr": "Liens", "en": "Links" },
+    "download": { "fr": "Télécharger", "en": "Download" },
+    "descriptionLicense": { "fr": "Waarp Gateway est sous licence GPLv3.", "en": "Waarp Gateway is licensed under the terms of the GPLv3 License." },
+    "descriptionSupport": { "fr": "fournit un support et des services professionnels pour", "en": "provides professional support and services for" },
     "close": { "fr": "Fermer", "en": "Close" },
     "edit": { "fr": "Modifier la pré-tâche", "en": "Edit pre-task" },
     "fieldName": { "fr": "Nom du champ", "en": "Field name" },
