--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -8,21 +8,21 @@
     "monitoring": { "fr": "Supervision", "en": "Monitoring" },
     "administration": { "fr": "Administration", "en": "Administration" },
     "status_of_services": { "fr": "Status des services", "en": "Status of services" },
-    "user_management": { "fr": "Gestion des utilisateurs", "en": "User management" },
-    "local_client_management": { "fr": "Gestion des clients locaux", "en": "Local client management" },
-    "managing_local_servers": { "fr": "Gestion des serveurs locaux", "en": "Local server management" },
-    "local_account_anagement": { "fr": "Gestion des comptes locaux", "en": "Local account management" },
-    "remote_partner_management": { "fr": "Gestion des partenaires distants", "en": "Remote partner management" },
-    "remote_account_management": { "fr": "Gestion des comptes distants", "en": "Remote account management" },
-    "transfer_rules_management": { "fr": "Gestion des règles de transfert", "en": "Transfer rules management" },
+    "user_management": { "fr": "Utilisateurs", "en": "User" },
+    "local_client_management": { "fr": "Clients locaux", "en": "Local client" },
+    "managing_local_servers": { "fr": "Serveurs locaux", "en": "Local server" },
+    "local_account_anagement": { "fr": "Comptes locaux", "en": "Local account" },
+    "remote_partner_management": { "fr": "Partenaires distants", "en": "Remote partner" },
+    "remote_account_management": { "fr": "Comptes distants", "en": "Remote account" },
+    "transfer_rules_management": { "fr": "Règles de transfert", "en": "Transfer rules" },
     "transfer_monitoring": { "fr": "Monitoring des transferts", "en": "Transfer monitoring" },
-    "managing_configuration_overrides": { "fr": "Gestion des override de configuration", "en": "Managing configuration overrides" },
-    "managing_authentication_authorities": { "fr": "Gestion des autorités d'authentification", "en": "Managing authentication authorities" },
-    "cloud_instance_management": { "fr": "Gestion des instances cloud", "en": "Cloud instance management" },
-    "snmp_management": { "fr": "Gestion de SNMP", "en": "SNMP Management" },
-    "smtp_credentials_management": { "fr": "Gestion des identifiants SMTP", "en": "SMTP credentials management" },
-    "email_templates_management": { "fr": "Gestion des templates d'email", "en": "Email templates management" },
-    "cryptographic_key_management": { "fr": "Gestion des clés cryptographiques", "en": "Cryptographic key management" },
+    "managing_configuration_overrides": { "fr": "Override de configuration", "en": "Configuration overrides" },
+    "managing_authentication_authorities": { "fr": "Autorités d'authentification", "en": "Authentication authorities" },
+    "cloud_instance_management": { "fr": "Instances cloud", "en": "Cloud instance" },
+    "snmp_management": { "fr": "SNMP", "en": "SNMP" },
+    "smtp_credentials_management": { "fr": "Identifiants SMTP", "en": "SMTP credentials" },
+    "email_templates_management": { "fr": "Templates d'email", "en": "Email templates" },
+    "cryptographic_key_management": { "fr": "Clés cryptographiques", "en": "Cryptographic key" },
 
     "title": { "fr": "Gestion des tâches de transfert", "en": "Transfer tasks management" },
     "accesRight": { "fr": "Droits d'accès refusés", "en": "Access rights denied" },
