corrective select transfer ans fix some error

--- a/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
+++ b/pkg/admin/gui/front-end/multi_language/tasks_transfer_rules_page.json
@@ -89,11 +89,16 @@
     "tooltipUsing": { "fr": "Le client à utiliser pour le transfert", "en": "The client to use for the transfer" },
     "to": { "fr": "Vers", "en": "To" },
     "tooltipTo": { "fr": "Le nom du partenaire auquel se connecter", "en": "The name of the partner to connect to" },
+    "from": { "fr": "De", "en": "From" },
+    "tooltipFrom": { "fr": "Le nom du partenaire d'où provient le transfert", "en": "The name of the partner from which the transfer originates" },
     "as": { "fr": "En tant que", "en": "As" },
     "tooltipAs": { "fr": "Le nom du compte avec lequel s'authentifier auprès du partenaire", "en": "The name of the account with which to authenticate with the partner." },
     "rule": { "fr": "Règle", "en": "Rule" },
     "tooltipRule": { "fr": "Le nom de la règle à utiliser pour le transfert", "en": "The name of the rule to use for the transfer" },
-    "copyInfo": { "fr": "Informations de copie", "en": "Copy information" },
+    "copyInfo": { "fr": "Copy des informations", "en": "Copy information" },
+    "selectRule": { "fr": "Sélectionnez votre règle", "en": "Select your rule" },
+    "send": { "fr": "Envoi", "en": "Send" },
+    "receive": { "fr": "Réception", "en": "Receive" },
     "tooltipCopyInfo": { "fr": "Indique si les informations du transfert en cours doit être copiées sur le nouveau transfert programmé", "en": "Indicates whether the information from the current transfer should be copied to the new scheduled transfer" },
     "info": { "fr": "Information", "en": "Information" },
     "tooltipInfo": { "fr": "Les informations de transfert du nouveau transfert", "en": "The transfer information of the new transfer" },
